[package]
name = "gpio_monitor"
authors = ["langyo <langyo@easy-hydro.com.cn>"]
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "^1", features = ["backtrace"] }

[target.'cfg(unix)'.dependencies]
embedded-hal = "^1"
rmodbus = { version = "^0.10", features = ["with_serde"] }
sysfs_gpio = "^0.6"

color-eyre = "^0.6"
crossterm = { version = "^0.29", features = ["event-stream"] }
flume = "^0.11"
ratatui = "^0.29"
tokio = { version = "^1", features = ["full"] }
tokio-stream = "^0.1"
