[package]
name = "gpio_monitor"
version = "0.1.0"
edition = "2024"

publish = true
authors = ["langyo <langyo.china@gmail.com>"]
description = "A sysfs-based GPIO status indicator for aiding embedded development and pinout identification"
license = "Apache-2.0"
repository = "https://github.com/langyo/gpio_monitor"

[dependencies]
anyhow = { version = "^1", features = ["backtrace"] }
clap = { version = "^4", features = ["derive"] }

embedded-hal = "^1"
rmodbus = { version = "^0.10", features = ["with_serde"] }
sysfs_gpio = "^0.6"

color-eyre = "^0.6"
crossterm = { version = "^0.29", features = ["event-stream"] }
flume = "^0.11"
ratatui = "^0.29"
tokio = { version = "^1", features = ["full"] }
tokio-stream = "^0.1"
